care/force-app/main/default/objects/Care_Recipient__c/Care_Recipient__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Contact and Case</description>
    <label>Care Recipient</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Care Recipient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>