care/force-app/main/default/objects/Care_Recipient__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Care Recipients</relationshipLabel>
    <relationshipName>Care_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>