care/force-app/main/default/objects/Care_Recipient__c/fields/Current_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Situation__c</fullName>
    <label>Current Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Home</fullName>
            </value>
            <value>
                <fullName>Independent Living Facility</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>My Home</fullName>
            </value>
            <value>
                <fullName>Senior Housing</fullName>
            </value>
            <value>
                <fullName>SNF/Rehab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>