care/force-app/main/default/objects/Care_Recipient__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>DateOfBirth</label>
    <type>Date</type>
</CustomField>