care/force-app/main/default/objects/Care_Recipient__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>45</length>
    <type>Text</type>
</CustomField>