care/force-app/main/default/objects/Care_Recipient__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>45</length>
    <type>Text</type>
</CustomField>