care/force-app/main/default/objects/Care_Recipient__c/fields/Lives_With__c.field-meta.xml
<CustomField>
    <fullName>Lives_With__c</fullName>
    <label>Lives With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Care Seeker</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Family Caregiver</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Caregiver</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>