care/force-app/main/default/objects/Care_Recipient__c/fields/Relationship_to_Seeker__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Seeker__c</fullName>
    <label>Relationship to Seeker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>DOMESTIC_PARTNER</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
                <isActive>false</isActive>
                <label>Domestic Partner</label>
            </value>
            <value>
                <fullName>Father</fullName>
                <isActive>false</isActive>
                <label>Father</label>
            </value>
            <value>
                <fullName>Friend</fullName>
                <isActive>false</isActive>
                <label>Friend</label>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>In-law</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
                <isActive>false</isActive>
                <label>Mother</label>
            </value>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Nephew/Niece</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Personal Assistant</fullName>
            </value>
            <value>
                <fullName>Pet</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
                <isActive>false</isActive>
                <label>Spouse/Partner</label>
            </value>
            <value>
                <fullName>Uncle/Aunt</fullName>
            </value>
            <value>
                <fullName>Unrelated Care Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>