care/force-app/main/default/objects/Care_Recipient__c/fields/Specific_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Specific_Relationship__c</fullName>
    <inlineHelpText>If Other is selected, please specify the relationship here (Ex: In-law)</inlineHelpText>
    <label>Specific Relationship</label>
    <type>TextArea</type>
</CustomField>